--- a/sigmaCabs/app/views/dispatches/controlView.html
+++ b/sigmaCabs/app/views/dispatches/controlView.html
@@ -39,7 +39,7 @@
 								<select class=" autoWidth selectFieldCompact" data-ng-model="bdSearch.attType" data-ng-options="obj.id as obj.attachmentType for obj in vAttTypes"></select>
 							</div>
 						</div>
-						<div class="row margin-bottom5">
+						<div class="row margin-bottom5 hide">
 							<div class="col-xs-5">
 								<label title="Vehicle Condition">Veh. Cond.</label>
 							</div>
@@ -88,22 +88,30 @@
 								<select class="autoWidth selectFieldCompact" data-ng-model="bdSearch.nxtHrs" data-ng-options="obj.val as obj.txt for obj in nxtHrs"></select>
 							</div>
 						</div>
-						<div class="row margin-bottom5">
+						<div class="row">
+							<div class="col-xs-5">
+								<label title="Collection" >Col.</label>
+							</div>
+							<div class="col-xs-7">
+								<select style="width: 60px;" class="selectFieldCompact" data-ng-model="bdSearch.collection" data-ng-options="obj.val as obj.txt for obj in collections"></select>
+							</div>
+						</div>
+						<div class="row margin-bottom5 hide">
 							<div class="col-xs-6">
 								<label title="Projected Hours" >P.H.</label>
 								<select style="width: 60px;" class="selectFieldCompact" data-ng-model="bdSearch.projHrs" data-ng-options="obj.val as obj.txt for obj in projHrs"></select>
 							</div>
 							<div class="col-xs-6">
-								<label title="Collection" >Col.</label>
-								<select style="width: 60px;" class="selectFieldCompact" data-ng-model="bdSearch.collection" data-ng-options="obj.val as obj.txt for obj in collections"></select>
+								
+								
 							</div>
 						</div>							
-						<div class="row margin-bottom5">
+						<div class="row margin-bottom5 hide">
 							<div class="col-xs-6">
 								<label title="Vehicle Mode MOnth">MM.</label>
 								<select  style="width: 60px;" class=" selectFieldCompact" data-ng-model="bdSearch.vModMonth" data-ng-options="k as v for (k,v) in oMonths"></select>
 							</div>
-							<div class="col-xs-6">
+							<div class="col-xs-6 hide">
 								<label title="Vehicle Mode Year">YY.&nbsp;</label>
 								<select  style="width: 60px;" class="selectFieldCompact" data-ng-model="bdSearch.vModYear" data-ng-options="k as v for (k,v) in vModYear"></select>
 							</div>
@@ -168,7 +176,7 @@
 								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.vehicle" data-ng-options="obj as obj.title for obj in oVehicles"></select>
 							</div>
 						</div>
-						<div class="row margin-bottom5">
+						<div class="row margin-bottom5 hide">
 							<div class="col-xs-5">
 							<label title="Vehicle Condition">Condition</label>
 							</div>
@@ -185,7 +193,7 @@
 							</div>
 						</div> -->
 
-						<div class="row margin-bottom5">
+						<div class="row margin-bottom5 hide">
 							<div class="col-xs-5">
 							<label title="Zone">Zone</label>
 							</div>
@@ -193,7 +201,7 @@
 								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.zone" data-ng-options="obj.id as obj.vehicleName for obj in oJournies"></select>
 							</div>
 						</div>
-						<div class="row margin-bottom5">
+						<div class="row margin-bottom5 hide">
 							<div class="col-xs-5">
 							<label title="Area">Area</label>
 							</div>
@@ -201,7 +209,7 @@
 								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.area" data-ng-options="obj.id as obj.vehicleName for obj in oAreas"></select>
 							</div>
 						</div>
-						<div class="row margin-bottom5">
+						<div class="row margin-bottom5 hide">
 							<div class="col-xs-5">
 							<label title="Expected Vehicle Vacant Time">Vacant Tm.</label>
 							</div>
@@ -210,13 +218,29 @@
 							</div>
 						</div>
 						<div class="row margin-bottom5">
-							<div class="col-xs-6">
+							<div class="col-xs-5">
+							<label title="Collection" >Col.</label>
+							</div>
+							<div class="col-xs-7">
+								<select style="width: 60px;" class="selectFieldCompact" data-ng-model="viSearch.collection" data-ng-options="obj.val as obj.txt for obj in collections"></select>
+							</div>
+						</div>
+						<div class="row margin-bottom5 hide">
+							<div class="col-xs-6  ">
 								<label title="Projected Hours" >P.H.</label>
 								<select style="width: 60px;" class="selectFieldCompact" data-ng-model="viSearch.projHrs" data-ng-options="obj.val as obj.txt for obj in projHrs"></select>
 							</div>
 							<div class="col-xs-6">
-								<label title="Collection" >Col.</label>
-								<select style="width: 60px;" class="selectFieldCompact" data-ng-model="viSearch.collection" data-ng-options="obj.val as obj.txt for obj in collections"></select>
+								
+								
+							</div>
+						</div>
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="Expected Vacant Vehicles">Exp. Vacant Vehicle.</label>
+							</div>
+							<div class="col-xs-7">
+								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.expectedVacantVehicle" data-ng-options="obj.id as obj.title for obj in oVacantTimes"></select>
 							</div>
 						</div>
 						<div class=" margin-bottom5" style="text-align: center;">
@@ -263,7 +287,7 @@
 								<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.vehicle" data-ng-options="obj as obj.title for obj in oVehicles"></select>
 							</div>
 						</div>
-					<div class="row margin-bottom5">
+					<div class="row margin-bottom5 hide">
 						<div class="col-xs-5">
 						<label title="Journey">Journey</label>
 						</div>
@@ -271,7 +295,7 @@
 							<select class=" autoWidth selectFieldCompact" data-ng-model="biSearch.journey" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes | filter:{parentId: '0'}"></select>
 						</div>
 					</div>
-					<div class="row margin-bottom5">
+					<div class="row margin-bottom5 hide">
 						<div class="col-xs-5">
 						<label title="Vehicle Name">Sub.J. From</label>
 						</div>
@@ -279,7 +303,7 @@
 							<select class="autoWidth selectFieldCompact"  data-ng-model="biSearch.sjFrom" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: biSearch.journey}"></select>
 						</div>
 					</div>
-					<div class="row margin-bottom5">
+					<div class="row margin-bottom5 hide">
 						<div class="col-xs-5">
 						<label title="Vehicle Name">Sub.J. To</label>
 						</div>
@@ -287,7 +311,7 @@
 							<select class="autoWidth selectFieldCompact"  data-ng-model="biSearch.sjTo" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: biSearch.journey}"></select>
 						</div>
 					</div>
-					<div class="row margin-bottom5">
+					<div class="row margin-bottom5 hide">
 						<div class="col-xs-5">
 						<label title="Zone">Zone</label>
 						</div>
@@ -295,7 +319,7 @@
 							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.zone" data-ng-options="obj.id as obj.vehicleName for obj in oJournies"></select>
 						</div>
 					</div>
-					<div class="row margin-bottom5">
+					<div class="row margin-bottom5 hide">
 						<div class="col-xs-5">
 						<label title="Area">Area</label>
 						</div>
@@ -303,7 +327,7 @@
 							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.area" data-ng-options="obj.id as obj.vehicleName for obj in oAreas"></select>
 						</div>
 					</div>
-					<div class="row margin-bottom5">
+					<div class="row margin-bottom5 hide">
 						<div class="col-xs-5">
 						<label title="Search By">Search By</label>
 						</div>
@@ -311,7 +335,7 @@
 							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.searchByType" data-ng-options="obj.id as obj.title for obj in oSearchBy"></select>
 						</div>
 					</div>
-					<div class="row margin-bottom5">
+					<div class="row margin-bottom5 hide">
 						<div class="col-xs-5">
 						<label title="Search By">Search Text</label>
 						</div>
@@ -362,7 +386,7 @@
 							<select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="alSearch.toTime" ng-options='k as v for (k,v) in hours' data-ng-change="fnValidateToTime()" style="width:48px;"></select>
 						</div>
 					</div>
-					<div class="row margin-bottom5">
+					<div class="row margin-bottom5 hide ">
 						<div class="col-xs-5">
 						<label title="Zone">Zone</label>
 						</div>
@@ -370,7 +394,7 @@
 							<select class="autoWidth selectFieldCompact" data-ng-model="alSearch.zone" data-ng-options="obj.id as obj.vehicleName for obj in oJournies"></select>
 						</div>
 					</div>
-					<div class="row margin-bottom5">
+					<div class="row margin-bottom5 ">
 						<div class="col-xs-5">
 						<label title="Area">Area</label>
 						</div>
