Dispatch changes / fixes...

--- a/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
@@ -11,7 +11,7 @@
 	<div class="row">
 		<div class="col-xs-6"><label title="Trip Count">Trip Count</label> {{bookingDetailsData.customer.tripCount}}</div>
 		<div class="col-xs-6" title="Grade / Category">
-			{{bookingDetailsData.customer.grade}} / {{bookingDetailsData.customer.category}}
+			{{bookingDetailsData.customer.gradeText}} / {{bookingDetailsData.customer.categoryText}}
 		</div>
 	</div>
 	<div class="row">
