--- a/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
@@ -5,14 +5,14 @@
             <h4 class="modal-title">Change Vehicle Location</h4>
         </div>
         <div class="popupCallerInfo">
-            <div class="left innerLabelContainer">
+            <!-- <div class="left innerLabelContainer">
                 <span  class="innerLabel">Caller Name: </span>
                 <span>-</span>
             </div>
             <div class="right innerLabelContainer">
                 <span class="innerLabel">Caller Ph.: </span>
                 <span>-</span>
-            </div>
+            </div> -->
         </div>
         <div class="modal-body" > 
             <fieldset class="left">
