--- a/sigmaCabs/app/views/dispatches/dispatchFeedback.html
+++ b/sigmaCabs/app/views/dispatches/dispatchFeedback.html
@@ -5,14 +5,14 @@
             <h4 class="modal-title">Driver / Dispatcher Request</h4>
         </div>
         <div class="popupCallerInfo">
-            <div class="left innerLabelContainer">
+            <!-- <div class="left innerLabelContainer">
                 <span class="innerLabel">Caller Name:</span>
                 <span>{{ customerName }}</span>
             </div>
             <div class="right innerLabelContainer">
                 <span class="innerLabel">Caller Ph.:</span>
                 <span>{{ customerMobile }}</span>
-            </div>
+            </div> -->
         </div>
         <div class="modal-body">
             <fieldset>
