Driver Batha and extracharge1 is added.

--- a/sigmaCabs/app/views/bookings/singleTariff.html
+++ b/sigmaCabs/app/views/bookings/singleTariff.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="right-column">
                             <label class="labelCompact" title="Extra Charge">Ext. Chrg.</label>
-                            <div class ="left" data-ng-bind="roData.extraCharges"></div>
+                            <div class ="left" data-ng-bind="roData.extraCharges1"></div>
                         </div>
                         <p class="clear"/>
                         <div class="left-column">
