--- a/sigmaCabs/app/views/bookings/mainTariffDetails.html
+++ b/sigmaCabs/app/views/bookings/mainTariffDetails.html
@@ -83,7 +83,7 @@
                 <p class="clear"/>
                 <div class="left-column">
                     <label class="labelCompact" title="Extra Hour Charge">Ext. hr Chrg.</label>
-                    <div class ="left" data-ng-bind="roMainTariffData.extraHourCharge"></div>
+                    <div class ="left" data-ng-bind="roMainTariffData.extraHourCharge1"></div>
                 </div>
                 <div class="left-column">
                     <label class="labelCompact" title="Driver Batha">Driver Batha.</label>
