added location in control filters
Signed-off-by: Mario Ray <sigma5@sigma5-desktop.(none)>

--- a/sigmaCabs/app/views/dispatches/controlView.html
+++ b/sigmaCabs/app/views/dispatches/controlView.html
@@ -206,7 +206,7 @@
 							<label title="Area">Area</label>
 							</div>
 							<div class="col-xs-7">
-								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.area" data-ng-options="obj.id as obj.vehicleName for obj in oAreas"></select>
+								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.area" data-ng-options="obj.location as obj.location for obj in oAreas"></select>
 							</div>
 						</div>
 						<div class="row margin-bottom5 hide">
@@ -324,7 +324,7 @@
 						<label title="Area">Area</label>
 						</div>
 						<div class="col-xs-7">
-							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.area" data-ng-options="obj.id as obj.vehicleName for obj in oAreas"></select>
+							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.area" data-ng-options="obj.location as obj.location for obj in oAreas"></select>
 						</div>
 					</div>
 					<div class="row margin-bottom5 hide">
@@ -399,7 +399,7 @@
 						<label title="Area">Area</label>
 						</div>
 						<div class="col-xs-7">
-							<select class="autoWidth selectFieldCompact" data-ng-model="alSearch.area" data-ng-options="obj.id as obj.vehicleName for obj in oAreas"></select>
+							<select class="autoWidth selectFieldCompact" data-ng-model="alSearch.area" data-ng-options="obj.location as obj.location for obj in oAreas"></select>
 						</div>
 					</div>
 					<!-- <div class="row margin-bottom5">
