--- a/sigmaCabs/app/views/dispatches/changeVehPickupLocation.html
+++ b/sigmaCabs/app/views/dispatches/changeVehPickupLocation.html
@@ -19,7 +19,7 @@
                 <legend class="searchbox-border">Change Pickup Location</legend>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Location</label>
-                    <span class="ellipsisText" title="{{vehicleDetails.vehicleMainDetails.location}}">{{vehicleDetails.vehicleMainDetails.location}}</span>
+                    <span class="ellipsisText" title="{{vehicleDetails.vehicleMainDetails.details.pickupPlace}}">{{vehicleDetails.vehicleMainDetails.details.pickupPlace}}</span>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField">New Location</label>
