added amount field in booking Info
Signed-off-by: Mario Ray <sigma5@sigma5-desktop.(none)>

--- a/sigmaCabs/app/views/dispatches/controlView.html
+++ b/sigmaCabs/app/views/dispatches/controlView.html
@@ -462,6 +462,7 @@
 			  <span class="panel-title">Booking Info</span>
 			  <span class="glyphicon glyphicon-refresh" title="Refresh Booking Info" data-ng-click="setBookingInfoGrid(false)"></span>
 			  <input id="while_info_search" type="text" ng-model="bookingInfoFilterText" class="searchInput pull-right" placeholder="Search Bookings" ng-change="bookingInfoSearch()"/>
+			  <div class="right" style="margin-right:10px;margin-top: 4px;">Total Amount: <span>{{totalTotalBookingInfoAmount}}</span></div>
 			</div>		
 			<div ng-show="showingAutoLoginVehicleGrid">
 			  <span class="panel-title">Auto-login Vehicles</span>
