Minor Fixes added..

--- a/sigmaCabs/app/views/admincs.html
+++ b/sigmaCabs/app/views/admincs.html
@@ -124,10 +124,10 @@ Welcome to Sigma Cabs..
 	</div>
 	<div class="row" style="margin-bottom: 5px;">
 		<div class="col-xs-2">
-			<label>Barge No.</label>
+			<label>Badge No.</label>
 		</div>
 		<div class="col-xs-10">
-			<input type="text" data-ng-model="vehicle.bargeNo" style="width: 100%;"/>
+			<input type="text" data-ng-model="vehicle.badgeNo" style="width: 100%;"/>
 		</div>
 	</div>
 	<div class="row" style="margin-bottom: 5px;">
