Special request changes added in control view

--- a/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
@@ -153,7 +153,8 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-12">
-			<textarea disabled>Comments here</textarea>
+			<label style="width: 90px;" title="Special Request">Special Req.:</label>&nbsp;{{bookingDetailsData.booking.specialRequestIdText}}
+			<textarea disabled>{{bookingDetailsData.booking.specialRequestComments}}</textarea>
 		</div>
 	</div>
 </div>
