--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -3,7 +3,7 @@
     <div class="relative">
         <div class="fieldContainer clearBoth relative clearBoth">
             <label class="labelCompact">Search </label>
-            <input type="text" ng-model="searchDetails.searchByVehicleId" class="left textFieldCompact" data-ng-enter="fnVehicleSearchButton();" maxlength="10" />
+            <input type="text" ng-model="searchDetails.searchByVehicleId" class="left textFieldCompact" data-ng-enter="fnVehicleSearchButton();" maxlength="10" number-only />
             <input name="" checked class="left smsCheckbox" type="checkbox" checked>
         </div>
         <!-- <div class="fieldContainer relative clearBoth">
