Dispatch and Control view changes added

--- a/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
@@ -11,11 +11,11 @@
     <p class="clear"/>
     <div class="fieldContainer relative left" style="width:180px;">
         <label class="labelCompact">Vehicle Name</label>
-        <span>{{vehicleDetails.vName}}</span>
+        <span>{{vehicleDetails.bookingVName}}</span>
     </div>
     <div class="fieldContainer relative right" style="width:180px">
         <label class="labelCompact">Vehicle Type</label>
-        <span>{{vehicleDetails.vType}}</span>
+        <span>{{vehicleDetails.bookingVType}}</span>
     </div>
     <p class="clear"/>
     <div class="fieldContainer relative left" style="width:180px;">
